# rust-kafka-consumer-example

./: Cargo.toml  Dockerfile
src/: cli.rs  consumer.rs  main.rs  model.rs  sink.rs
