[package]
name = "rust-kafka-consumer-example"
version = "0.1.0"
authors = ["Amiel Martin <amiel.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.8.0"
anyhow = "1.0"
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
postgres = "0.19.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"