[package]
name = "rust-kafka-consumer-example"
version = "0.1.0"
authors = ["Amiel Martin <amiel.martin@gmail.com>"]
edition = "2018"
description = "Polls kafka for debezium changes and upserts those changes to postgres."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
tokio-postgres = "0.7.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
clap = "2.33.3"
tokio = { version = "1", features = ["full"] }


[dependencies.kafka]
default-features = false
version = "0.8.0"